Homepage HTML completed

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
   </ul>
  </section>
 
+ <section class="call-to-action">
+   <h2>A Better Way to Browse</h2>
+   <p>Get rid of tab clutter for good. Browse and share like never before. </p>
+   <a href="signup.html" class="btn">Try Us Out</a>
+ </section>
+
  </main>
 
  <!-- Footer -->
