image file updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
    <meta charset="UTF-8">
    <title>Save, share and collaborate | Lasso</title>
    <link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet">
+
+   <!-- CSS -->
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/fontawesome.css">
+<link rel="stylesheet" href="css/animate.css">
+
  </head>
 
  <body>
@@ -14,7 +21,7 @@
 <header>
   <nav class="container">
     <div class="one-half">
-      <a href="index.html" class="site-logo"><img src="images/logo.png" alt="Lasso" /></a>
+      <a href="index.html" class="site-logo"><img src="images/Logo.png" alt="Lasso" /></a>
     </div>
     <div class="one-half">
       <ul>
@@ -24,7 +31,7 @@
     </div>
   </nav>
   <div class="container hero">
-    <h1>Save, share and collaborate.</h1>
+    <h1 class="animated fadeIn">Save, share and collaborate.</h1>
     <p>Lasso lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
     <a href="signup.html" class="btn">Start Your Free Trial!</a>
     <img src="images/dashboard.png" alt="Lasso" />
