--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <body>
 
    <!-- Hero -->
-<header>
+<header class="hero">
   <nav class="container">
     <div class="one-half">
       <a href="index.html" class="site-logo"><img src="images/Logo.png" alt="Lasso" /></a>
