--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
    <meta charset="UTF-8">
    <title>Save, share and collaborate | Lasso</title>
    <link href="https://fonts.googleapis.com/css?family=Lora|Nunito" rel="stylesheet">
-
+   <script src="https://use.fontawesome.com/ad09a1bfcf.js"></script>
    <!-- CSS -->
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/fontawesome.css">
+<link rel="stylesheet" href="css/fontawesome.min.css">
 <link rel="stylesheet" href="css/animate.css">
 
  </head>
@@ -33,7 +33,7 @@
   <div class="container hero">
     <h1 class="animated fadeIn">Save, share and collaborate.</h1>
     <p>Lasso lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
-    <a href="signup.html" class="btn">Start Your Free Trial!</a>
+    <a href="signup.html" class="btn">Start Your Free Trial</a>
     <img src="images/dashboard.png" alt="Lasso" />
   </div>
 </header>
@@ -43,14 +43,17 @@
    <section class="benefits">
      <ul class="container">
        <li class="one-third">
+          <i class="fa fa-file-o" aria-hidden="true"></i>
          <h2>Create notes</h2>
          <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
        </li>
        <li class="one-third">
+         <i class="fa fa-picture-o" aria-hidden="true"></i>
          <h2>Save images</h2>
          <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within Lasso.</p>
        </li>
        <li class="one-third">
+         <i class="fa fa-link" aria-hidden="true"></i>
          <h2>Add links</h2>
          <p>Forget bookmarking sites in your browser. With Lasso, you can add links, group them and view them from any computer.</p>
        </li>
@@ -73,7 +76,7 @@
               <li>Up to 10 collaborators</li>
               <li><strong>2GB</strong> of storage</li>
             </ul>
-            <a href="signup.html" class="btn">Start Your Free Trial!</a>
+            <a href="signup.html" class="btn">Start Your Free Trial</a>
           </div>
         </li>
 
@@ -87,7 +90,7 @@
           <li><strong>5GB</strong> of storage</li>
           <li>Real-time collaboration</li>
         </ul>
-        <a href="signup.html" class="btn">Start Your Free Trial!</a>
+        <a href="signup.html" class="btn">Start Your Free Trial</a>
       </div>
     </li>
     <li class="one-third">
@@ -100,11 +103,16 @@
           <li><strong>Unlimited</strong> storage</li>
           <li>Real-time collaboration</li>
         </ul>
-        <a href="signup.html" class="btn">Start Your Free Trial!</a>
+        <a href="signup.html" class="btn">Start Your Free Trial</a>
       </div>
     </li>
       </ul>
+
+      <div class="container">
+     <p class="small">*We will not collect your credit card information until your 30-day trial has ended.</p>
+   </div>
     </section>
+
 
     <!-- Testimonials -->
  <section class="testimonials">
@@ -143,7 +151,7 @@
  <section class="call-to-action">
    <h2>A Better Way to Browse</h2>
    <p>Get rid of tab clutter for good. Browse and share like never before. </p>
-   <a href="signup.html" class="btn">Try Us Out</a>
+   <a href="signup.html" class="btn">Start Your Free Trial</a>
  </section>
 
  </main>
