--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
   </ul>
  </section>
 
- <section class="call-to-action">
+<!-- <section class="call-to-action">
    <h2>A Better Way to Browse</h2>
    <p>Get rid of tab clutter for good. Browse and share like never before. </p>
    <a href="signup.html" class="btn">Start Your Free Trial</a>
- </section>
+ </section> -->
 
  </main>
 
@@ -160,19 +160,19 @@
  <footer>
    <div class="container footer-nav-block">
        <div class="left-footer-block one-third">
-         <p class="copyright-block">&copy; 2015. <strong>Lasso</strong> - All Rights Reserved.</p>
+         <p class="copyright-block">&copy; 2017. <strong>Lasso</strong> - All Rights Reserved.</p>
        </div>
        <nav class="link-block middle-footer-block one-third">
          <ul>
-           <li><a href="">Terms</a></li> /
-           <li><a href="">Privacy Policy</a></li> /
-           <li><a href="">Contact Us</a></li> /
-           <li><a href="">About Us</a></li> /
+           <li><a href="">Terms</a></li> |
+           <li><a href="">Privacy Policy</a></li> |
+           <li><a href="">Contact Us</a></li> |
+           <li><a href="">About Us</a></li> |
            <li><a href="">Twitter</a></li>
          </ul>
        </nav>
        <div class="right-footer-block one-third">
-         <img class="logo" src="images/logo.png" alt="Lasso" />
+         <img class="logo" src="images/Logo.png" alt="Lasso" />
        </div>
    </div>
  </footer>
