--- a/js/images.html
+++ b/js/images.html
@@ -27,7 +27,7 @@
        <ul>
          <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
-         <li><a href="images.html"><i class="fa fa-picture-o"></i> Images</a></li>
+         <li><a href="#"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
        </ul>
        <p>Boxes</p>
@@ -56,78 +56,32 @@
        </div>
      </div>
      <div class="container">
+
        <div class="content-item">
          <div class="item-box">
           <img src="https://images.pexels.com/photos/7065/space-desk-office-hero-7065.jpg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb">
          </div>
        </div>
-       <div class="content-item">
-         <div class="item-box">
-           <h2><img src="https://www.airbnb.com/favicon.ico"><a href="#">airbnb.com</a></h2>
-           <p>Unforgettable trips start with Airbnb. <br><br>
 
-Find adventures nearby or in faraway places and access unique homes, experiences, and places around the world.</p>
-         </div>
-       </div>
-       <div class="content-item">
-         <div class="item-box">
-           <h2>Find repair man </h2>
-           <p>Need to find a repair man for the fridge
-             in the break room.<br>
-
-             If anyone has a suggestion, add their
-             contact info below.</p>
-         </div>
-       </div>
        <div class="content-item">
          <div class="item-box">
           <img src="https://images.pexels.com/photos/3540/restaurant-alcohol-bar-drinks.jpg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb">
          </div>
        </div>
-       <div class="content-item">
-         <div class="item-box">
-           <h2> Geology 1 </h2>
-           <p>Every few hundred years, one of the hills
-             on Vulcano, an island in the
-             Mediterranean Sea off the western coast
-             of Italy, rumbles and spews out molten
-             rock, glassy cinders, and dense “smoke”
-             (actually a mixture of various gases, fine
-             ash, and very tiny liquid droplets).</p>
-         </div>
-       </div>
-       <div class="content-item">
-         <div class="item-box">
-           <h2> Supplies needed - Oct. 16 </h2>
-           <p>- Thin black sharpies<br>
-             - Copy paper<br>
-             - AAA batteries</p>
-         </div>
-       </div>
+
+
        <div class="content-item">
          <div class="item-box">
           <img src="../images/background.jpg">
          </div>
        </div>
-       <div class="content-item">
-         <div class="item-box">
-           <h2><img src="https://www.airbnb/favicon.ico"><a href="#">invisionapp.com</a></h2>
-           <p>The world's best companies use InVision to design the products you love. <br><br>
 
-              Try InVision free and turn your screens into live, clickable prototypes in seconds.</p>
-         </div>
-       </div>
        <div class="content-item">
          <div class="item-box">
           <img src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb">
          </div>
        </div>
-       <div class="content-item">
-         <div class="item-box">
-           <h2><img src="https://www.airbnb/favicon.ico"><a href="#">yourkarma.com</a></h2>
-           <p>Take WiFi with you on the go.</p>
-         </div>
-       </div>
+      
      </div>
    </section>
  </main>
