--- a/js/dashboard.html
+++ b/js/dashboard.html
@@ -55,12 +55,14 @@
          <a href="#" class="btn">+ Add</a>
        </div>
      </div>
+     
      <div class="container">
        <div class="content-item">
          <div class="item-box">
           <img src="https://images.pexels.com/photos/7065/space-desk-office-hero-7065.jpg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb">
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
            <h2><img src="https://www.airbnb.com/favicon.ico"><a href="#">airbnb.com</a></h2>
@@ -69,6 +71,7 @@
 Find adventures nearby or in faraway places and access unique homes, experiences, and places around the world.</p>
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
            <h2>Find repair man </h2>
@@ -79,11 +82,13 @@ Find adventures nearby or in faraway places and access unique homes, experiences
              contact info below.</p>
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
           <img src="https://images.pexels.com/photos/3540/restaurant-alcohol-bar-drinks.jpg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb">
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
            <h2> Geology 1 </h2>
@@ -96,6 +101,7 @@ Find adventures nearby or in faraway places and access unique homes, experiences
              ash, and very tiny liquid droplets).</p>
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
            <h2> Supplies needed - Oct. 16 </h2>
@@ -104,28 +110,34 @@ Find adventures nearby or in faraway places and access unique homes, experiences
              - AAA batteries</p>
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
           <img src="../images/background.jpg">
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
-           <h2><img src="https://www.airbnb/favicon.ico"><a href="#">invisionapp.com</a></h2>
-           <p>The world's best companies use InVision to design the products you love. <br><br>
+           <h2><img src="https://www.airbnb.com/favicon.ico"><a href="#">airbnb.com</a></h2>
+           <p>Unforgettable trips start with Airbnb. <br><br>
 
-              Try InVision free and turn your screens into live, clickable prototypes in seconds.</p>
+Find adventures nearby or in faraway places and access unique homes, experiences, and places around the world.</p>
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
           <img src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb">
          </div>
        </div>
+
        <div class="content-item">
          <div class="item-box">
-           <h2><img src="https://www.airbnb/favicon.ico"><a href="#">yourkarma.com</a></h2>
-           <p>Take WiFi with you on the go.</p>
+           <h2><img src="https://www.airbnb.com/favicon.ico"><a href="#">airbnb.com</a></h2>
+           <p>Unforgettable trips start with Airbnb. <br><br>
+
+Find adventures nearby or in faraway places and access unique homes, experiences, and places around the world.</p>
          </div>
        </div>
      </div>
