--- a/images.html
+++ b/images.html
@@ -25,9 +25,9 @@
      <div class="items">
        <p>Items</p>
        <ul>
-         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+         <li><a href="dashboard.html"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
-         <li><a href="#"><i class="fa fa-picture-o"></i> Images</a></li>
+         <li><a href="images.html"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
        </ul>
        <p>Boxes</p>
@@ -81,7 +81,7 @@
           <img src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?w=940&h=650&dpr=2&auto=compress&cs=tinysrgb">
          </div>
        </div>
-      
+
      </div>
    </section>
  </main>
