--- a/js/dashboard.html
+++ b/js/dashboard.html
@@ -25,7 +25,7 @@
      <div class="items">
        <p>Items</p>
        <ul>
-         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+         <li class="active"><a href="dashboard.html"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
          <li><a href="images.html"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
@@ -55,7 +55,7 @@
          <a href="#" class="btn">+ Add</a>
        </div>
      </div>
-     
+
      <div class="container">
        <div class="content-item">
          <div class="item-box">
