--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,7 @@
    <link rel="stylesheet" href="css/normalize.css">
    <link rel="stylesheet" href="css/style.css">
   <script src="https://use.fontawesome.com/ad09a1bfcf.js"></script>
+  <link rel="stylesheet" href="css/dropit.css">
 
  </head>
 
@@ -25,7 +26,7 @@
      <div class="items">
        <p>Items</p>
        <ul>
-         <li><a href="dashboard.html" style="color: #FFF000"><i class="fa fa-th-large"></i> All Items</a></li>
+         <li class="active"><a href="dashboard.html"><i class="fa fa-th-large"></i> All Items</a></li>
          <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
          <li><a href="images.html"><i class="fa fa-picture-o"></i> Images</a></li>
          <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
@@ -39,9 +40,19 @@
      </div>
 
      <div class="settings">
-     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
-     <p>Joey Kirk</p>
-     <a href="#"><i class="fa fa-cog"></i></a>
+       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
+       <p>Joey Kirk</p>
+       <ul class="menu">
+         <li>
+           <a href="#"><i class="fa fa-cog"></i></a>
+           <ul>
+               <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+               <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+               <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+           </ul>
+         </li>
+       </ul>
+
    </div>
 
    </nav>
@@ -52,7 +63,16 @@
      <div class="container">
        <div class="header">
          <h1>All Items</h1>
-         <a href="#" class="btn">+ Add</a>
+         <ul class="menu">
+           <li>
+             <a href="#" class="btn">+ Add</a>
+             <ul>
+                 <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+                 <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+                 <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+             </ul>
+           </li>
+         </ul>
        </div>
      </div>
      <div class="container">
@@ -131,5 +151,10 @@ Find adventures nearby or in faraway places and access unique homes, experiences
      </div>
    </section>
  </main>
+ <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".menu").dropit();
+   </script>
  </body>
  </html>
