--- a/dashboard.html
+++ b/dashboard.html
@@ -20,6 +20,10 @@
 
 
  <body class="dashboard">
+
+   <!-- RESPONSIVE NAV -->
+  <a class="hamburger" id="menu" href="#">&#9776;</a>
+
    <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
      <a href="#" class="site-logo"><img src="images/Logo.png"></a>
@@ -155,6 +159,9 @@ Find adventures nearby or in faraway places and access unique homes, experiences
    <script src="js/dropit.js"></script>
    <script type="text/javascript">
      $(".menu").dropit();
+     $( "#menu" ).click(function() {
+        $("#left-nav").toggleClass("open", 200);
+    });
    </script>
  </body>
  </html>
