--- a/images.html
+++ b/images.html
@@ -19,6 +19,10 @@
 
 
  <body class="dashboard">
+
+   <!-- RESPONSIVE NAV -->
+  <a class="hamburger" id="menu" href="#">&#9776;</a>
+
    <!-- LEFT NAV -->
    <nav id="left-nav" class="left-nav">
      <a href="#" class="site-logo"><img src="images/Logo.png"></a>
@@ -85,5 +89,13 @@
      </div>
    </section>
  </main>
+ <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+   <script src="js/dropit.js"></script>
+   <script type="text/javascript">
+     $(".menu").dropit();
+     $( "#menu" ).click(function() {
+        $("#left-nav").toggleClass("open", 200);
+    });
+   </script>
  </body>
  </html>
